--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,9 @@ services:
     name: ai-backend
     env: python
     region: oregon
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn backend.main:app --host 0.0.0.0 --port $PORT
+    rootDir: backend
+    buildCommand: pip install -r ../requirements.txt
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: HF_API_KEY
         sync: false
@@ -12,6 +13,7 @@ services:
 
   - type: static
     name: ai-frontend
+    rootDir: frontend
     buildCommand: ""
-    publishPath: frontend
+    publishPath: .
     plan: free
