Fix: Updated render.yaml to new staticSites format

--- a/render.yaml
+++ b/render.yaml
@@ -11,9 +11,8 @@ services:
         sync: false
     plan: free
 
-  - type: web
-    name: ai-frontend
-    env: static
+staticSites:
+  - name: ai-frontend
     rootDir: frontend
     buildCommand: ""
     publishPath: .
