--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 python-dotenv==1.0.0
 requests==2.31.0
-sentence-transformers==2.2.2
-scikit-learn==1.3.2
-numpy==1.24.3
+sentence-transformers==2.5.0
+numpy==1.24.4
 PyPDF2==3.0.1
 Pillow==10.1.0
