--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
 uvicorn
 python-multipart
 python-dotenv
 requests
 PyPDF2
-pineconesentence-transformers
+pinecone
+sentence-transformers
 numpy
