fix: Switch to FastEmbed to solve OOM error

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ python-dotenv
 requests
 PyPDF2
 pinecone
-sentence-transformers
+fastembed  # <--- The lightweight replacement for sentence-transformers
 numpy
