feat: Upgrade to Gemini Embeddings and Vision for stability

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ python-dotenv
 requests
 PyPDF2
 pinecone
-fastembed  # <--- The lightweight replacement for sentence-transformers
+google-generativeai
 numpy
